--- a/.github/workflows/create.yaml
+++ b/.github/workflows/create.yaml
@@ -27,4 +27,4 @@ jobs:
         run: terraform plan
 
       - name: terraform approve
-        run: terraform apply -auto-approve
+        run: terraform destroy -auto-approve
